adding change to Player object to save the highCard of the hand. and adding css to the  error message

--- a/PokerApp/PokerApp/Content/style/page_layout.css
+++ b/PokerApp/PokerApp/Content/style/page_layout.css
@@ -83,3 +83,14 @@ answerBox{
     text-align: right;
     top:1px;
 }
+
+errormessage{
+    font-weight:normal;
+    color:#F03F13;
+    letter-spacing:0pt;
+    word-spacing:2pt;
+    font-size:20px;
+    text-align:center;
+    font-family:impact, sans-serif;
+    line-height:1;
+}
