--- a/PokerApp/PokerApp/Views/Poker/Index.cshtml
+++ b/PokerApp/PokerApp/Views/Poker/Index.cshtml
@@ -159,7 +159,7 @@
             <div class="center">
                 <answerbox name="output" id="output"> The Winner is @Model.Winner</answerbox>
             </div>
-            <p class="center">@Model.Error</p>
+            <erromessage>@Model.Error</erromessage>
             <div class="center">
                 <p>Player 1: @Model.Player2Wins win(s)</p>
                 <p>Player 2: @Model.Player2Wins win(s)</p>
