Redone variables to stay consistence with conventions in c#. some minor change and comments added

--- a/PokerApp/PokerApp/Views/Poker/Index.cshtml
+++ b/PokerApp/PokerApp/Views/Poker/Index.cshtml
@@ -66,7 +66,7 @@
 </head>
 
 
-<h2>Shall we play?</h2>
+<h2>Shall We Play a Game of Poker?</h2>
 
 @using (Html.BeginForm("DetermineWinner", "Poker", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
