Save what player has picked. and give proper error msg.

--- a/PokerApp/PokerApp/Views/Poker/Index.cshtml
+++ b/PokerApp/PokerApp/Views/Poker/Index.cshtml
@@ -75,35 +75,75 @@
         <select name="Player1Card1" id="player1Card1">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player1Card1 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player1Card2" id="player1Card2">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player1Card2 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player1Card3" id="player1Card3">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player1Card3 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player1Card4" id="player1Card4">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player1Card4 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player1Card5" id="player1Card5">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player1Card5 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
     </div>
@@ -113,35 +153,75 @@
         <select name="Player2Card1" id="player2Card1">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player2Card1 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player2Card2" id="player2Card2">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player2Card2 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player2Card3" id="player2Card3">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player2Card3 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player2Card4" id="player2Card4">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player2Card4 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
 
         <select name="Player2Card5" id="player2Card5">
             @for (int i = 0; i < cards.Count; i++)
             {
-                <option value="@i">@cards[i]</option>
+                @*<option value="@i">@cards[i]</option>*@
+                if (Model.Player2Card5 == i.ToString())
+                {
+                    <option value="@i" selected>@cards[i]</option>
+                }
+                else
+                {
+                    <option value="@i">@cards[i]</option>
+                }
             }
         </select>
     </div>
