Display factor of winning to the player.

--- a/PokerApp/PokerApp/Views/Poker/Index.cshtml
+++ b/PokerApp/PokerApp/Views/Poker/Index.cshtml
@@ -263,7 +263,7 @@
         {
             <!--<span>The winner is @Model.Winner</span>-->
             <div class="center" id="resultBox">
-                <answerbox name="output" id="output"> The Winner is @Model.Winner</answerbox>
+                <answerbox name="output" id="output"> The Winner is @Model.Winner @Model.WinFactor</answerbox>
             </div>
             <div class="center" id="errorBox">
                 <errMsg>@Model.Error</errMsg>
